# calhacks25

./: README.md  pyproject.toml  train.py  wordle.toml
configs/: alphabet-sort.toml  continuation-quality.toml  math.toml  reasoning-gym.toml  reverse-text.toml  wiki-search.toml  wordle.toml
